# aidac-python

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish-testpypi.yml
backups/v060-20260720-212355/src/aidac/: __init__.py  cli.py
backups/v060-20260720-212954/: pyproject.toml
backups/v060-20260720-212954/src/aidac/: __init__.py
backups/v060-20260720-212954/tests/: test_alerting.py  test_postgres_watch_alerting.py
deploy/postgresql/: create_aidac_store.sql
examples/: basic_analysis.py  madgan_placeholder.py
scripts/: deploy.sh
src/aidac/: __init__.py  alert_store.py  alerting.py  alerts_cli.py  api.py  api_cli.py  audit_cli.py  cli.py  cli.py.backup-20260720-210708  component_health.py  config.py  config_cli.py  dashboard.py  detector.py  doctor.py  engine.py  incidents.py  incidents_cli.py  learning.py  legacy_alert_store.py  metrics.py  models.py  ops_cli.py  postgres_alert_store.py  service_cli.py  storage_cli.py  structured_logging.py  telemetry.py
src/aidac/connectors/: __init__.py  postgresql.py
tests/: test_alert_store.py  test_alerts_cli.py  test_api.py  test_api_cli.py  test_api_components.py  test_api_incidents.py  test_api_rbac.py  test_audit_integrity.py  test_cli_export_filter.py  test_component_health.py  test_config.py  test_config_cli.py  test_dashboard.py  test_engine.py  test_incident_metrics_ops.py  test_incidents.py  test_incidents_cli.py  test_learning.py  test_metrics.py  test_ops_cli.py  test_postgres_alert_store_routing.py  test_postgres_cli_config.py  test_postgres_watch.py  test_postgres_watch_alerting.py  test_postgresql_connector.py  test_postgresql_connector.py.bak  test_service_cli.py  test_sqlite_store.py  test_storage_cli.py  test_structured_logging.py  test_telemetry.py
