[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aidac-sec"
version = "0.2.0"
description = "Adaptive and explainable database cybersecurity framework"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

authors = [
    { name = "William Kandolo" }
]

keywords = [
    "database-security",
    "cybersecurity",
    "anomaly-detection",
    "sql-security",
    "artificial-intelligence",
    "explainable-ai"
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
strict = true
packages = ["aidac"]

[project.scripts]

aidac = "aidac.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
